--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "evncup",
+  "name": "Huanbai",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://liumuxuan18.github.io/finalCup",
+  "homepage": "https://ZarkHuang.github.io/Huanbai",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
