--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "Huanbai",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ZarkHuang.github.io/Huanbai",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
+    "axios": "^1.3.4",
     "bootstrap": "^5.3.0-alpha1",
     "gh-pages": "^5.0.0",
     "gsap": "^2.1.3",
