--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "Huanbai",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ZarkHuang.github.io/Huanbai",
   "dependencies": {
+    "@line/bot-sdk": "^7.5.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
+    "axios": "^1.3.4",
     "bootstrap": "^5.3.0-alpha1",
     "gh-pages": "^5.0.0",
     "gsap": "^2.1.3",
@@ -16,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "react-share": "^4.4.1",
     "sass": "^1.58.3",
     "web-vitals": "^2.1.4"
   },
