--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-share": "^4.4.1",
     "sass": "^1.58.3",
     "styled-components": "^5.3.8",
+    "sweetalert2": "^11.7.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
